--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
       run: npm run build
       
     - name: Build documentation
-      run: npm run build:docs
+      run: npm run docs:build
       
     - name: Semantic Release
       env:
@@ -75,7 +75,7 @@ jobs:
       run: npm ci
       
     - name: Build documentation
-      run: npm run build:docs
+      run: npm run docs:build
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
