--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huggingface-transformers-react",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "A React provider and hooks for using Hugging Face Transformers.js in React applications with built-in loading states, error handling, and Suspense support",
   "main": "dist/index.js",
@@ -13,7 +13,6 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "build:docs": "typedoc",
     "dev": "rollup -c -w",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,8 +21,8 @@
     "type-check": "tsc --noEmit",
     "prepublishOnly": "npm run build && npm run test && npm run lint",
     "docs:dev": "typedoc --watch",
-    "docs:build": "typedoc && npm run build:examples",
-    "build:examples": "cd examples && npm run build",
+    "docs:build": "typedoc && npm run build:examples && mv examples/kitchen-sink/dist docs/example",
+    "build:examples": "cd examples/kitchen-sink && npm i && npm run build && cd ../..",
     "release": "semantic-release"
   },
   "keywords": [
