feat: add comprehensive image processing capabilities
- Add image segmentation support with interactive demo
- Add image-to-text (captioning) functionality
- Add image classification with configurable top-k results
- Enhance kitchen-sink example with responsive image processing showcase
- Update package.json description and keywords for better discoverability

BREAKING CHANGE: None - all changes are additive and backward compatible

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "huggingface-transformers-react",
   "version": "1.1.0",
   "type": "module",
-  "description": "A React provider and hooks for using Hugging Face Transformers.js in React applications with built-in loading states, error handling, and Suspense support",
+  "description": "A React provider and hooks for using Hugging Face Transformers.js in React applications with built-in loading states, error handling, Suspense support, and comprehensive image processing capabilities including segmentation, classification, and captioning",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -32,8 +32,14 @@
     "machine-learning",
     "ai",
     "nlp",
+    "computer-vision",
+    "image-processing",
     "sentiment-analysis",
     "speech-recognition",
+    "image-segmentation",
+    "image-classification",
+    "image-captioning",
+    "image-to-text",
     "context",
     "hooks",
     "typescript",
